--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,14 @@ body            { font-family: sans-serif; background: #eee; }
                   border-width: 0px 0px 1px 0px;
                   border-color: darkred;}
 
-input.radio     { margin:0 20px; 
-                  background-color: transparent;}
+.inpbox {
+    text-align: left; 
+    width: 75px;
+    background-color: transparent;
+    border-style: solid;
+    border-width: 0px 0px 1px 0px;
+    border-color: darkred;
+}
 .score          { text-align: right; }
 .name           { cursor: pointer; }
 .clr            { clear:both; height: 20px; }
